--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,13 @@ exdata-course-project-2.Rproj
 .Rproj.user/783A01F2/sdb/prop/68A60EB9
 
 .Rproj.user/783A01F2/sdb/prop/INDEX
+
+.Rproj.user/783A01F2/sdb/prop/C02EE8F4
+
+.Rproj.user/783A01F2/sdb/s-5EDF211E/98420E8B
+
+.Rproj.user/783A01F2/sdb/s-5EDF211E/98420E8B
+
+.Rproj.user/783A01F2/sdb/s-5EDF211E/98420E8B
+
+.Rproj.user/783A01F2/sdb/s-5EDF211E/98420E8B
