--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,28 @@
 .Rproj.user/783A01F2/sdb/s-BE770E9F/4C7BBCE6
 
 .Rproj.user/783A01F2/sdb/s-BE770E9F/A074AC2E
+
+.RData
+
+.Rhistory
+
+*.pper
+
+.Rproj.user/783A01F2/saved_source_markers
+
+.Rproj.user/783A01F2/sdb/per/t/4C7BBCE6
+
+.Rproj.user/783A01F2/sdb/per/t/24BE77B
+
+.Rproj.user/783A01F2/sdb/s-BE770E9F/24BE77B
+
+.Rproj.user/783A01F2/sdb/s-BE770E9F/24BE77B
+
+*.Rdata
+
+.Rproj.user/783A01F2/sdb/per/t/E7FB1732
+
+.Rproj.user/783A01F2/sdb/s-BE770E9F/lock_file
+
+.Rproj.user/783A01F2/sdb/s-BE770E9F/E7FB1732
+.Rproj.user*
