--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,24 @@
+# History files
+.Rhistory
+.Rapp.history
 
-*.rdx
+# Session Data files
+.RData
 
-*.RData
+# Example code in package build process
+*-Ex.R
 
-*.rdb
+# RStudio files
+.Rproj.user/
+
+# produced vignettes
+vignettes/*.html
+vignettes/*.pdf
+
+# OAuth2 token, see https://github.com/hadley/httr/releases/tag/v0.3
+.httr-oauth
+statinference-course-project.Rproj
+analysis_cache*
+cache/unname*
+
+.Rproj.user/783A01F2/sdb/s-87E9D458/3F445C69
