--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,6 @@ vignettes/*.pdf
 # OAuth2 token, see https://github.com/hadley/httr/releases/tag/v0.3
 .httr-oauth
 statinference-course-project.Rproj
+.Rproj.user
+
+style.css
