--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,10 @@ cache/unname*
 
 .Rproj.user/783A01F2/sdb/s-87E9D458/3F445C69
 .Rproj.user
+
+.Rproj.user/783A01F2/sdb/s-87E9D458/3F445C69
+
+rsconnect/**
+cache/**
+analysis_cache/**
+*.Rproj
