--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,14 @@
-# History files
+
 .Rhistory
 .Rapp.history
-
-# Session Data files
 .RData
-
-# Example code in package build process
 *-Ex.R
-
-# RStudio files
 .Rproj.user/
-
-# produced vignettes
 vignettes/*.html
 vignettes/*.pdf
-
-# OAuth2 token, see https://github.com/hadley/httr/releases/tag/v0.3
 .httr-oauth
 statinference-course-project.Rproj
 .Rproj.user
+show4calls.R
 
-style.css
+course-materials/*
