--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,5 @@ rsconnect/documents/analysis.Rmd/rpubs.com/rpubs/**
 style.css
 replace.R
 figure/*
+/rsconnect/documents/analysis.Rmd/rpubs.com/rpubs/**
+/rsconnect/documents/analysis.Rmd/rpubs.com/rpubs/Publish Document.dcf
