Upd week 3 stuff
after “Build and reload”

--- a/week-3/topten/DESCRIPTION
+++ b/week-3/topten/DESCRIPTION
@@ -5,6 +5,8 @@ Version: 0.1
 Date: 2016-01-11
 Author: Katya Demidova
 Maintainer: Katya Demidova <demidovakatya@gmail.com>
-Description: Functions for building and predicting from models from selecting top 10 predictors.
+Description: Functions for building and predicting from models from selecting
+    top 10 predictors.
 License: GPL-3
 LazyData: TRUE
+RoxygenNote: 5.0.1
