gitignore for analytics edge

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@ data-science/rprog/quizzes/.Rhistory
 **.Rhistory
 
 data-science/r-programming/assignment_1/specdata/*.csv
+
+analytics-edge/.Rproj.user/*
