add mit6002x pset5

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,31 @@ data-science/rprog/quizzes/.Rhistory
 data-science/r-programming/assignment_1/specdata/*.csv
 
 analytics-edge/.Rproj.user/*
+
+python-for-everybody/python-databases/counting-emails.sqlite
+
+python-for-everybody/python-databases/emaildb.sqlite
+
+python-for-everybody/python-databases/geodata/where.html
+
+python-for-everybody/python-databases/geodata/where.js
+
+python-for-everybody/python-databases/geodata/where.data
+
+python-for-everybody/python-databases/gmane/d3.v2.js
+
+python-for-everybody/python-databases/gmane/d3.layout.cloud.js
+
+python-for-everybody/python-databases/gmane/gline.jsonp
+
+python-for-everybody/python-databases/pagerank/d3.v2.js
+
+python-for-everybody/python-databases/gmane/gword.jsonp
+
+python-for-everybody/python-databases/pagerank/force.js
+
+python-for-everybody/python-databases/rosterdb.sqlite
+
+python-for-everybody/python-databases/trackdb.sqlite
+
+python-for-everybody/python-databases/sql1
