--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,4 @@ python-for-everybody/python-databases/rosterdb.sqlite
 python-for-everybody/python-databases/trackdb.sqlite
 
 python-for-everybody/python-databases/sql1
+.Rproj.user
