add analytics edge week 5 - lectures 1

--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,5 @@ python-for-everybody/python-databases/trackdb.sqlite
 
 python-for-everybody/python-databases/sql1
 .Rproj.user
+
+analytics-edge/week_5/tweets.csv
