--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,11 @@ python-for-everybody/python-databases/sql1
 .Rproj.user
 
 analytics-edge/week_5/tweets.csv
+
+analytics-edge/kaggle_competition/kaggle.R
+analytics-edge/kaggle_competition/submissions/*
+analytics-edge/kaggle_competition/test.csv
+
+analytics-edge/kaggle_competition/train.csv
+
+analytics-edge/kaggle_competition/train_labels.csv
