--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 **.Rhistory
 .Rproj.user
 */.ipynb_checkpoints/*-checkpoint.ipynb
+*/.idea/*
 
 data-science/r-programming/assignment_1/specdata/*.csv
 analytics-edge/.Rproj.user/*
